# PoseEstimationPCA

./: CMakeLists.txt  README.md  main.cpp
files/: background.pcd
src/IO/: RealsenseCamera.cpp  RealsenseCamera.h
src/Pipeline/: FloorRemover.cpp  FloorRemover.h  PoseEstimator.cpp  PoseEstimator.h
src/Processing/: FrameConverter.cpp  FrameConverter.h
src/Processing/Filters/: DepthFilter.cpp  DepthFilter.h  PointCloudFilter.cpp  PointCloudFilter.h
src/Utils/: Utils.cpp  Utils.h
src/VisualizingTools/: Visualizer.cpp  Visualizer.h
